--- a/site/sass/components/_card-study.scss
+++ b/site/sass/components/_card-study.scss
@@ -53,6 +53,10 @@
     width: 3.75rem;
   }
 
+  &__tile-eyebrow {
+    color: var(--grey-750);
+  }
+
   &__tile-title {
     margin: 1rem 0 2rem;
   }
