--- a/site/_components/case-studies.njk
+++ b/site/_components/case-studies.njk
@@ -10,16 +10,15 @@
   @param {string} content.cta.url: href value for the CTA.
   @param {array} studies: Array of 3 case studies.
 #}-->
-{% from 'card-study.njk' import cardStudy %}
-{% macro caseStudies(content, studies) %}
+{% from 'card-study.njk' import cardStudy %} {% macro caseStudies(content, studies) %}
 <section class="case-studies {% if content.modifiers %}{{content.modifiers}}{% endif %}">
   <header class="case-studies__header">
     <h1 class="type--h1 case-studies__title">{{content.title}}</h1>
-    {% if content.subtitle %}<h2 class="type--large case-studies__subtitle">{{content.subtitle}}</h2>{% endif %}
+    {% if content.subtitle %}
+    <h2 class="type--large case-studies__subtitle">{{content.subtitle}}</h2>
+    {% endif %}
   </header>
-  <div class="case-studies__content">
-    {% for study in studies %}{{cardStudy(study, loop.first)}}{% endfor %}
-  </div>
+  <div class="case-studies__content">{% for study in studies %}{{cardStudy(study, loop.first)}}{% endfor %}</div>
   {% if content.cta %}
   <footer class="case-studies__footer">
     <a class="cta cta--medium case-studies__cta" href="{{content.cta.url}}">{{content.cta.text}}</a>
