--- a/site/_components/banner-interstitial.njk
+++ b/site/_components/banner-interstitial.njk
@@ -25,7 +25,7 @@
       <small class="banner-interstitial__eyebrow type--h1">{{content.eyebrow}}</small>
       <h2 class="banner-interstitial__title type--mega">{{content.title}}</h2>
       <p class="banner-interstitial__copy type--base">{{content.copy}}</p>
-      <a href="{{cta.url}}" class="cta cta--link banner-interstitial__cta">
+      <a href="{{cta.url}}" class="cta cta--transparent banner-interstitial__cta">
         {{cta.text}}
       </a>
     </div>
