--- a/site/sass/components/_cta.scss
+++ b/site/sass/components/_cta.scss
@@ -21,6 +21,10 @@
     @extend %cta--low;
   }
 
+  &--transparent {
+    @extend %cta--transparent;
+  }
+
   &--link {
     @extend %cta--link;
   }
