--- a/site/sass/components/_nav.scss
+++ b/site/sass/components/_nav.scss
@@ -25,7 +25,7 @@
   @include minLangMQ($bkpt-map--header--large) {
     grid-column: 2;
     grid-row: 1 / span 1;
-    margin-top: 0.5em;
+    margin-top: 1.25rem;
   }
 
   &--animated {
@@ -113,7 +113,7 @@
           height: 0;
           left: calc(50% - 10px);
           position: absolute;
-          top: calc(1.65em - 5px);
+          top: calc(1.75em - 5px);
           width: 0;
           z-index: 101;
         }
@@ -127,7 +127,7 @@
           height: 0;
           left: calc(50% - 8px);
           position: absolute;
-          top: calc(1.65em);
+          top: calc(1.75em);
           width: 0;
           z-index: 102;
         }
@@ -257,7 +257,7 @@
 
   &__primary-item {
     @include minLangMQ($bkpt-map--header--large) {
-      padding-bottom: 1rem;
+      padding-bottom: 1.18rem;
 
       &:not(.nav--highlighted) {
         position: static;
