--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -41,8 +41,8 @@ hideNewsletter: true
   <div id="home__community" class="wrapper--full-bleed wrapper--padding wrapper--padding-full-top wrapper__contained wrapper__background wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
 
   <!-- Subscribe -->
-  <div class="wrapper wrapper--no-bottom wrapper--padded">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
+  <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
 
   <!-- Footnotes -->
-  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--padded wrapper__contained">{{ footnotes(l10n.home.footnotes.notes) }}</footer>
+  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--no-top wrapper--padded wrapper__contained">{{ footnotes(l10n.home.footnotes.notes) }}</footer>
 </div>
