update style guide

--- a/site/sass/components/_card-subnav.scss
+++ b/site/sass/components/_card-subnav.scss
@@ -50,6 +50,7 @@
     background-color: var(--blue-600);
     border-radius: 50%;
     display: flex;
+    flex-shrink: 0;
     height: 3rem;
     justify-content: center;
     width: 3rem;
