--- a/site/_components/card-subnav.njk
+++ b/site/_components/card-subnav.njk
@@ -4,9 +4,9 @@
   @param {object} navSection - Object containing the following attributes.
   @param {string} navSection.title - Nav section title.
   @param {string} navSection.desc - Nav section description.
-  @param {object} navSection.icon - Nav section icon.
+  @param {object} navSection.icon - Object containing the following attributes.
   @param {string} navSection.icon.name - ID of icon within spritesheet.
-  @param {string} navSection.icon.background - Color to apply to the icon's background circle.
+  @param {('primary-blue'|'primary-yellow'|'primary-green')} navSection.icon.background - Color keyword to apply as the icon's background circle.
   @param {object[]} navSection.sections - List of sections representing the sub-navigation of the site.
   @param {string} navSection.sections[].title - Title of the subnav section.
   @param {string} navSection.sections[].url - Url of the subnav section.
@@ -16,7 +16,9 @@
 <article class="card-subnav">
   <header class="card-subnav__header">
     <h4 class="card-subnav__title type--h3">{{ navSection.title }}</h4>
-    <div class="card-subnav__icon-wrapper card-subnav__icon-wrapper--{{navSection.icon.background}}">{{ icon(navSection.icon.name, 'card-subnav__icon') }}</div>
+    {% if navSection.icon is defined %}
+    <div class="card-subnav__icon-wrapper {% if navSection.icon.background in ['primary-blue', 'primary-yellow', 'primary-green'] %} card-subnav__icon-wrapper--{{navSection.icon.background}} {% endif %}">{{ icon(navSection.icon.name, 'card-subnav__icon') }}</div>
+    {% endif %}
   </header>
   <p class="card-subnav__body type--base">{{ navSection.desc }}</p>
   <ul class="card-subnav__sections">
