simplify and align grayscale, update jsdoc

--- a/site/_components/card-subnav.njk
+++ b/site/_components/card-subnav.njk
@@ -4,7 +4,7 @@
   @param {object} navSection - Object containing the following attributes.
   @param {string} navSection.title - Nav section title.
   @param {string} navSection.desc - Nav section description.
-  @param {object} navSection.icon - Object containing the following attributes.
+  @param {object} navSection.icon (optional) - Object containing the following attributes.
   @param {string} navSection.icon.name - ID of icon within spritesheet.
   @param {('primary-blue'|'primary-yellow'|'primary-green')} navSection.icon.background - Color keyword to apply as the icon's background circle.
   @param {object[]} navSection.sections - List of sections representing the sub-navigation of the site.
