--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -38,7 +38,7 @@ hideNewsletter: true
   <div id="home__chromebooks" class="wrapper wrapper--background wrapper--no-bottom wrapper--padded">{{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}</div>
 
   <!-- Community -->
-  <div id="home__community" class="wrapper--full-bleed wrapper--padding wrapper--padding-full-top wrapper__contained wrapper__background wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
+  <div id="home__community" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
 
   <!-- Subscribe -->
   <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
