--- a/site/sass/components/_external-community.scss
+++ b/site/sass/components/_external-community.scss
@@ -1,19 +1,22 @@
 // Styles for the external community with logo.
 .external-community {
-  $logo-size: pxRem(60px);
+  $logo-size: 3rem;
+  $max-width: 7.5rem;
 
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
-  margin: 0 pxRem(8px) pxRem(40px);
-  text-align: center;
-  width: 9rem;
-  @supports (width: clamp(pxRem(125px), 20vw, pxRem(160px))) {
-    width: clamp(pxRem(125px), 20vw, pxRem(160px));
-  }
-  @supports (margin: 0 clamp(0.5rem, 4vw, 1.5rem) pxRem(40px)) {
-    margin: 0 clamp(0.5rem, 4vw, pxRem(30px)) pxRem(40px);
+  flex: 1 0 $max-width;
+  max-width: $max-width;
+  text-decoration: none;
+
+  &__liner {
+    align-items: center;
+    border: 1px solid var(--grey-200);
+    border-radius: 0.625rem;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-self: center;
+    padding: 1rem 0.25rem;
+    text-align: center;
   }
 
   &__logo {
@@ -21,5 +24,20 @@
     margin-bottom: 1rem;
     max-height: initial;
     width: $logo-size;
+  }
+
+  &__copy-wrapper {
+    color: var(--grey-850);
+    line-height: 1.3;
+  }
+
+  &__topic,
+  &__text {
+    display: block;
+  }
+
+  &__title {
+    font-weight: $font-weight-bold;
+    margin-bottom: 0.75rem;
   }
 }
