--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -26,7 +26,7 @@ hideNewsletter: true
 
   <!-- Recent Articles -->
   {% if landingCollections.posts.length > 0 %}
-  <div id="home__articles" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.posts.title, landingCollections.homePosts, l10n.home.posts.modifiers, l10n.locale) }}</div>
+  <div id="home__articles" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.posts.title, landingCollections.homePosts, l10n.home.posts.modifiers, l10n.locale.code) }}</div>
   {% endif %}
 
   <!-- Featured Case Story -->
