swap grid-gap for gap, update component docs

--- a/site/_components/fifty-fifty.njk
+++ b/site/_components/fifty-fifty.njk
@@ -1,5 +1,5 @@
 <!--{#
-  Renders a fifty-fifty module.
+  Renders a Fifty Fifty module.
 
   @param {object} content - An object containing the following attributes.
   @param {string} content.title - title of the content.
@@ -10,8 +10,8 @@
   @param {string} cta.text - CTA link text.
 
   @param {object[]} images - An array of image objects containing the following attributes.
-  @param {string} image.src - Image source.
-  @param {string} image.alt - Image description.
+  @param {string} images[].src - Image source.
+  @param {string} images[].alt - Image description.
 
   @param {object} modifiers (optional) - An object containing the following attributes.
   @param {string} modifiers.class A custom class.
