--- a/site/sass/components/_fifty-fifty.scss
+++ b/site/sass/components/_fifty-fifty.scss
@@ -19,12 +19,16 @@
     }
 
     @include mq($single-column) {
-      [dir='ltr'] & {
-        text-align: left;
-      }
+      text-align: start;
 
-      [dir='rtl'] & {
-        text-align: right;
+      @supports not (text-align: start) {
+        [dir='ltr'] & {
+          text-align: left;
+        }
+
+        [dir='rtl'] & {
+          text-align: right;
+        }
       }
     }
   }
